modules/vpc/network.tf
resource "aws_vpc" "main" {
  cidr_block       = "${var.vpc_cidr}"
  instance_tenancy = "${var.tenancy}"
  enable_dns_support=true
  enable_dns_hostnames = true
  tags ={
    Name = "main"
  }
}


# Subnets
resource "aws_subnet" "main-public-1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "${var.public_subnet_cidr}"
  map_public_ip_on_launch = "true"
  availability_zone       = "eu-west-1a"

  tags = {
    Name = "main-public-1"
  }
}




// resource "aws_subnet" "main-private-1" {
//   vpc_id                  = aws_vpc.main.id
//   cidr_block              = "${var.private_subnet_cidr}"
//   map_public_ip_on_launch = "false"
//   availability_zone       = "eu-west-1a"

//   tags = {
//     Name = "main-private-1"
//   }
// }


# Internet GW
resource "aws_internet_gateway" "main-gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main"
  }
}

# route tables
resource "aws_route_table" "main-public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main-gw.id
  }

  tags = {
    Name = "main-public-1"
  }
}

# route associations public
resource "aws_route_table_association" "main-public-1-a" {
  subnet_id      = aws_subnet.main-public-1.id
  route_table_id = aws_route_table.main-public.id
}


/*
  NAT Instance
*/
resource "aws_security_group" "nat" {
    name = "vpc_nat"
    description = "Allow traffic to pass from the private subnet to the internet"

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = -1
        to_port = -1
        protocol = "icmp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port=0
        to_port=0
        protocol="-1"
        cidr_blocks=["0.0.0.0/0"]
    }
    
    vpc_id = "${aws_vpc.main.id}"

    tags ={
        Name = "NATSecGroup"
    }
}



output "vpc_id" {
  value = "${aws_vpc.main.id}"
}

output "main-public-1_subnet_id" {
  value = "${aws_subnet.main-public-1.id}"
}

// output "main-private-1_subnet_id" {
//   value = "${aws_subnet.main-private-1.id}"
// }

output "vpc_security_group_ids" {
  value = "${aws_security_group.nat.id}"
}
